# platformer

./: .ignore  Cargo.toml  LICENSE  README.md  Trunk.toml  bevy_app-42b9c6efa9da6095.js  bevy_app-9b5a7f3badf7ddb.js  index.html
.github/workflows/: deploy.yaml  release.yaml
assets/: manifest.assets  manifest.assets.ron
assets/ldtk/: level0.ldtk
platform/macos/src/Game.app/Contents/: Info.plist
platform/web/: styles.css
src/: camera_plugin.rs  config_plugin.rs  controls_plugin.rs  kitty_plugin.rs  level_plugin.rs  lib.rs  loading_plugin.rs  main.rs  player_plugin.rs  wall_plugin.rs
