[package]
name = "platformer"
version = "0.1.0"
publish = false
authors = ["Cooper Reiff <dev@cooperreiff.com>"]
edition = "2021"
exclude = ["dist", "platform", "assets"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_gilrs",
  "bevy_render",
  "png",
  "x11",
  "filesystem_watcher",
] }
bevy_kira_audio = "0.15"
bevy_asset_loader = { version = "0.16", features = [
  "standard_dynamic_assets",
] }
rand = "0.8"
bevy_egui = "0.20"
bevy-inspector-egui = "0.18"
bevy-debug-text-overlay = "5.1"
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
bevy_ecs_ldtk = { version = "0.7", features = [ "atlas" ] }
bevy_rapier2d = { version = "0.21", features = [ "debug-render-2d" ] }

[build-dependencies]
embed-resource = "1.4"
